--- a/sam-app/template.yaml
+++ b/sam-app/template.yaml
@@ -26,6 +26,12 @@ Resources:
             Path: /hello
             Method: get
 
+  TestEc2:
+    Type: AWS::EC2::Instance
+    Properties:
+      ImageId: ami-06f0cb5e606459f16
+      InstanceType: t2.nano
+
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
